--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "@xanben/accelerano",
   "version": "0.0.1",
   "description": "Suite of utils and components ready to use in your project.",
-  "author": "xanben@github.com"
+  "author": "xanben@github.com",
+  "dependencies": {
+    "prettier": "^2.8.1"
+  }
 }
