--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "author": "xanben@github.com",
   "dependencies": {
     "prettier": "^2.8.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.4"
   }
 }
