--- a/package.json
+++ b/package.json
@@ -3,11 +3,26 @@
   "version": "0.0.1",
   "description": "Suite of utils and components ready to use in your project.",
   "author": "xanben@github.com",
+  "scripts": {
+    "rollup": "rollup -c"
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
   "dependencies": {
     "moment": "^2.29.4",
     "prettier": "^2.8.1"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.4",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^10.0.1",
+    "rollup": "^3.7.4",
+    "rollup-plugin-dts": "^5.0.0",
+    "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   }
 }
