--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
 name: Build
 on:
   push:
+    paths-ignore: [ 'README.md' ]
     branches: [ main ]
   pull_request:
+    paths-ignore: [ 'README.md' ]
     branches: [ main ]
 jobs:
   rollup:
