--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rollup/plugin-commonjs": "^23.0.4",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
+    "@types/node": "^18.11.15",
     "rollup": "^3.7.4",
     "rollup-plugin-dts": "^5.0.0",
     "tslib": "^2.4.1",
